force-app/main/default/objects/Boletin__c/Boletin__c.object-meta.xml
<CustomObject>
    <label>Boletin</label>
    <nameField>
        <label>Nombre</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Boletines</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>