force-app/main/default/objects/Boletin__c/fields/Alumno__c.field-meta.xml
<CustomField>
    <fullName>Alumno__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Alumno</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Boletines</relationshipLabel>
    <relationshipName>Boletines</relationshipName>
    <type>Lookup</type>
</CustomField>