force-app/main/default/objects/Boletin__c/fields/Asistencia__c.field-meta.xml
<CustomField>
    <fullName>Asistencia__c</fullName>
    <label>Asistencia</label>
    <summarizedField>Asistencia__c.Asistencia__c</summarizedField>
    <summaryForeignKey>Asistencia__c.Boletin__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>