force-app/main/default/objects/Boletin__c/fields/nombreAlumno__c.field-meta.xml
<CustomField>
    <fullName>nombreAlumno__c</fullName>
    <formula>Alumno__r.FirstName + &apos; &apos; + Alumno__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nombre Completo</label>
    <type>Text</type>
</CustomField>