force-app/main/default/objects/Boletin__c/fields/nombreDivision__c.field-meta.xml
<CustomField>
    <fullName>nombreDivision__c</fullName>
    <formula>Division__r.nombre__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nombre de Division</label>
    <type>Text</type>
</CustomField>