force-app/main/default/objects/Boletin__c/validationRules/Programa_del_alumno.validationRule-meta.xml
<ValidationRule>
    <fullName>Programa_del_alumno</fullName>
    <active>true</active>
    <errorConditionFormula>Text(Alumno__r.Programa__c) &lt;&gt;  Division__r.Programa__c</errorConditionFormula>
    <errorDisplayField>Division__c</errorDisplayField>
    <errorMessage>El programa del alumno debe ser igual al de la division.</errorMessage>
</ValidationRule>