force-app/main/default/objects/Boletin__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Division__c</columns>
    <columns>Asistencia__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>