force-app/main/default/objects/Boletin__c/listViews/Vigentes.listView-meta.xml
<ListView>
    <fullName>Vigentes</fullName>
    <columns>NAME</columns>
    <columns>Division__c</columns>
    <columns>Asistencia__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Estado__c</field>
        <operation>equals</operation>
        <value>Vigente</value>
    </filters>
    <label>Vigentes</label>
</ListView>